[BE] optimization [FE] fixing layout bugs

--- a/projeto-travessia-frontend/src/app/components/login/login.component.scss
+++ b/projeto-travessia-frontend/src/app/components/login/login.component.scss
@@ -21,6 +21,11 @@
 
 .panel-flat{
     margin:0 !important;
+    align-items: center;
+    justify-content: center;
+    width: 130%;
+    height: 30%;
+    border-radius:4px;
     border:1px solid #909FA7;
 }
 
@@ -62,9 +67,16 @@
 }
 
 .wrapper{
-    position: relative;
+    height: 100vh;
     width: 100%;
-    height: auto;
+    max-height: 200vh;
+    margin: 0;
+    padding: 0; 
+    background-color: #222831;
+    overflow-y:auto;
+    margin-top: 15%;
+    position: auto;
+    display: flex;
     -webkit-overflow-scrolling: touch;
 
     &.ng-leave{
@@ -94,6 +106,7 @@
 
 
 .btn{
+    margin-top: 3%;
     display: inline-block;
     margin-bottom: 0;
     font-weight: normal;
